<resources>
    <string name="app_name">Weather</string>
    <string name="no_cities">No cities found yet</string>
    <string name="city_name">City name</string>
    <string name="add">add</string>
    <string name="cancel">cancel</string>
    <string name="no_data_for">Could not find \'%1$s\'</string>
    <string name="no_connection">No connection.</string>
    <string name="temperature">Temperature:</string>
    <string name="humidity">Humidity:</string>
    <string name="description">Description:</string>
    <string name="deleted_snackbar">%1$s removed.</string>
</resources>
